<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
        <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                     android:layout_height="wrap_content"
                                                     tools:context=".MainActivity"
                                                     android:background="@color/colorPrimaryDark"
        >
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text="@string/TOW_text"
                    app:layout_constraintTop_toTopOf="parent"
                    android:id="@+id/text"
                    android:gravity="start"
                    android:textColor="@color/colortext"/>

            <Spinner
                    android:id="@+id/Spinner1"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:entries="@array/TOW"
                    android:fadingEdge="vertical"
                    android:textAlignment="center"
                    app:layout_constraintTop_toBottomOf="@id/text"
                android:gravity="center_horizontal" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:id="@+id/text2"
                    app:layout_constraintTop_toBottomOf="@id/Spinner1"
                    android:text="@string/Back_text"
                    android:gravity="start"
                    android:textColor="@color/colortext"/>

            <Spinner
                    android:id="@+id/Spinner2"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text2"
                    android:layout_marginTop="0dp"
                    android:entries="@array/Back"
                    android:textAlignment="center"
                    android:textColor="@color/colortext"
                android:gravity="center_horizontal" />
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:id="@+id/text3"
                    app:layout_constraintTop_toBottomOf="@id/Spinner2"
                    android:text="@string/Door_text"
                    android:gravity="start"
                    android:textColor="@color/colortext"/>

            <Spinner
                    android:id="@+id/Spinner3"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text3"
                    android:layout_marginTop="0dp"
                    android:entries="@array/Doors"
                    android:textAlignment="center"
                    android:textColor="@color/colortext"
                android:gravity="center_horizontal" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:id="@+id/text4"
                    app:layout_constraintTop_toBottomOf="@id/Spinner3"
                    android:text="@string/draws_text"
                    android:gravity="start"
                    android:textColor="@color/colortext"/>

            <Spinner
                    android:id="@+id/Spinner4"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text4"
                    android:layout_marginTop="0dp"
                    android:entries="@array/Draws"
                    android:textAlignment="center"
                    android:textColor="@color/colortext"
                android:gravity="center_horizontal" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:id="@+id/text5"
                    app:layout_constraintTop_toBottomOf="@id/Spinner4"
                    android:text="@string/Comp_text"
                    android:gravity="start"
                    android:textColor="@color/colortext"/>

            <Spinner
                    android:id="@+id/Spinner5"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text5"
                    android:layout_marginTop="0dp"
                    android:entries="@array/Complexity"
                    android:textAlignment="center"
                    android:textColor="@color/colortext"
                android:gravity="center_horizontal" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:id="@+id/text6"
                    app:layout_constraintTop_toBottomOf="@id/Spinner5"
                    android:text="@string/Finish_text"
                    android:gravity="start"
                    android:textColor="@color/colortext"/>

            <Spinner
                    android:id="@+id/Spinner6"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text6"
                    android:layout_marginTop="0dp"
                    android:entries="@array/Finish"
                    android:textAlignment="center"
                    android:textColor="@color/colortext"
                android:gravity="center_horizontal" />


            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:id="@+id/text7"
                    app:layout_constraintTop_toBottomOf="@id/Spinner6"
                    android:text="@string/Height"
                    android:gravity="start"
                    android:textColor="@color/colortext"/>

            <EditText
                android:id="@+id/etHeight"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:autofillHints="@string/height_hint"
                android:ems="5"
                android:gravity="center"
                android:hint="@string/height_hint"
                android:inputType="numberDecimal"
                android:text="0"
                android:textColor="@color/colortext"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text7"
                tools:visibility="visible" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:id="@+id/text8"
                    app:layout_constraintTop_toBottomOf="@id/etHeight"
                    android:text="@string/Length"
                    android:gravity="start"
                    android:textColor="@color/colortext"/>

            <EditText
                android:id="@+id/etLength"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:autofillHints="@string/Length_hint"
                android:ems="5"
                android:gravity="center"
                android:hint="@string/Length_hint"
                android:inputType="numberDecimal"
                android:text="0"
                android:textColor="@color/colortext"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text8"
                tools:visibility="visible" />

            <Button
                    android:id="@+id/button"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:background="@color/colorAccent2"
                    android:text="@string/Calculate"
                    android:textColor="@color/colortext"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/etLength" />

            <TextView
                android:id="@+id/text9"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="start"
                android:text="@string/Unitprice"
                android:textColor="@color/colortext"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/button"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                    android:id="@+id/text10"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:gravity="start"
                    android:text="@string/Total_Cost"
                    android:textColor="@color/colortext"
                    android:textSize="27sp"
                    tools:layout_editor_absoluteY="631dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text9" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>